manifest/staging/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: vfde-inv-var-demo-staging
  labels:
    app: api
    network-policy: vfde-network-policy
  annotations:
    keel.sh/approvals: '0'
    keel.sh/policy: force
    keel.sh/trigger: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
        network-policy: vfde-network-policy
    spec:
      containers:
        - name: api
          image: >-
            flowmoco/vfde-inv-var-api:voll-184-endpoint-allocation-datastorage-handler
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 500M
            requests:
              cpu: 50m
              memory: 50M
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
