manifest/staging/kafka.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: kafka
  namespace: vfde-inv-var-staging
  labels:
    app: vfde-inv-var
    tier: kafka
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vfde-inv-var
      tier: kafka
  template:
    metadata:
      labels:
        app: vfde-inv-var
        tier: kafka
    spec:
      containers:
        - name: kafka
          image: 'bitnami/kafka:2.7.0'
          ports:
            - name: kafka
              containerPort: 9092
              protocol: TCP
            - name: kafka-secure
              containerPort: 9093
              protocol: TCP
            - name: jmx-broker
              containerPort: 9393
              protocol: TCP
            - name: jmx-mirror
              containerPort: 9394
              protocol: TCP
            - name: http-metric
              containerPort: 24042
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 175m
              memory: 1Gi
          volumeMounts:
            - name: kafka
              mountPath: /bitnami/kafka
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: kafka
        creationTimestamp: null
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 3G
        volumeMode: Filesystem
      status:
        phase: Pending
  serviceName: kafka
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
