manifest/staging/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: vfde-inv-var-demo-staging
  generation: 76
  creationTimestamp: '2021-04-13T11:51:27Z'
  labels:
    app: ui
  annotations:
    keel.sh/approvals: '0'
    keel.sh/policy: force
    keel.sh/trigger: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ui
        network-policy: vfde-network-policy
    spec:
      containers:
        - name: ui
          image: 'flowmoco/vfde-inv-var-ui-demo:0.0.10-dev'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 500M
            requests:
              cpu: 50m
              memory: 50M
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 80
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
