manifest/staging/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: vfde-inv-var-demo-staging
  labels:
    app: api
spec:
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: api
  clusterIP:
  type: NodePort
