manifest/staging/zookeeper-cluster-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zookeeper
  namespace: vfde-inv-var-demo-staging
spec:
  podSelector:
    matchLabels:
      app: zookeeper
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kafka
    ports:
      - port: 2181
        protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: zookeeper
    ports:
      - port: 2888
        protocol: TCP        
      - port: 3888
        protocol: TCP  

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: kafka
    ports:
      - port: 9092
        protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: zookeeper
    ports:
      - port: 2888
        protocol: TCP
      - port: 3888
        protocol: TCP
